--- a/css/styles_kevin.css
+++ b/css/styles_kevin.css
@@ -1,36 +1,51 @@
 /*!
- * Start Bootstrap - Busines Frontpage (https://startbootstrap.com/template-overviews/business-frontpage)
- * Copyright 2013-2017 Start Bootstrap
- * Licensed under MIT (https://github.com/BlackrockDigital/startbootstrap-business-frontpage/blob/master/LICENSE)
+ * EenmaalAndermaal
+ * Auteur: Kevin van Schaijk
  */
+/* fonts */
+@import url('https://fonts.googleapis.com/css?family=Open+Sans:300,400|Ubuntu');
 
 
+
+body{
+	font-family:'Open Sans';
+}
 /* Page navigation */
 nav.navbar{
- background-color:transparent;
+	background-color:transparent;
+	line-height:16px;
 }
 
-nav.navbar a{color:white;}
+nav.navbar a{
+	color:white;
+}
+
+.no_hover{  display: table-cell;
+   text-align: center;
+   vertical-align: middle;}
 /* Header */
 .promo-header {
-  height: 500px;
-  min-height: 300px;
-  background: linear-gradient( rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4) ),url('../img/header/mobile_header.jpg') center center no-repeat scroll;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  background-size: cover;
-  -o-background-size: cover;
+	height: 500px;
+	min-height: 300px;
+	background: linear-gradient( rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4) ),url('../img/header/mobile_header.jpg') center center no-repeat scroll;
+	-webkit-background-size: cover;
+	-moz-background-size: cover;
+	background-size: cover;
+	-o-background-size: cover;
+}
+
+.promo-header h1 b,.promo-header h1 strong{
+	font-weight:bold;
 }
 
 .promo-header .logo{
 	width:150px;
-	height:auto;
-	
 }
 
 .promo-header h1{
-	font-size:45px;
-	
+	margin-top:20px;
+	font-size:26px;
+	font-weight:100;
 }
 
 .promo-header .container{
@@ -39,32 +54,59 @@ nav.navbar a{color:white;}
 }
 
 .navbar-dark .navbar-toggler{
-color: white !important;
-border-color: white;
+	color: white !important;
+	border-color: white;
 }
 .card {
-  height: 100%;
+	height: 100%;
 }
 
 .navbar-dark .navbar-toggler-icon { 
-background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(255, 255, 255, 0.9)' stroke-width='3' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E");
+	background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(255, 255, 255, 0.9)' stroke-width='3' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E");
  }
  
-.navbar-dark .navbar-nav .nav-link{color:white;}
+.navbar-dark .navbar-nav .nav-link{
+	color:white;
+}
 
-/* Search bar */
-.promo-header input[type="search"]{
-	min-width: 220px;
+/* Search bar navigation */
+.navbar input[type="search"]{
+	width: 180px;
     padding: 5px;
+	border: none;
+	border-radius: 5px;
+}
+
+.navbar input[type="submit"]{
+	width: 50px;
+	padding: 5px;
+	position: relative;
+	right: 20px;
+	border: 0px;
+	background: #548235;
+	color: white;
+	border-radius: 0px 5px 5px 0px;
+
+}
+
+.navbar input[type="search"],.navbar input[type="submit"]{font-size:12px;}
+
+/* Search bar header*/
+.promo-header input[type="search"]{
+	margin-top:20px;
+	min-width: 220px;
+    padding: 10px;
 	border: none;
 }
 .promo-header input[type="submit"]{
-
-padding: 5px;
-position: relative;
-right: 5px;
-border: 0px;
-background: #548235;
-color: white;
+	margin-top:20px;
+	padding: 10px;
+	position: relative;
+	right: 5px;
+	border: 0px;
+	background: #F2552C;
+	color: white;
 }
+
+
 
