--- a/css/styles_kevin.css
+++ b/css/styles_kevin.css
@@ -7,6 +7,7 @@
 
 body{
 	font-family:'Open Sans';
+
 }
 /* Page navigation */
 nav.navbar{
@@ -112,4 +113,6 @@ nav.navbar a{
 }
 
 
-
+.changeColor {
+   background: white;
+}
