--- a/css/jonathan.css
+++ b/css/jonathan.css
@@ -1,8 +1,10 @@
 #header-content{
-	height: 75px;
+	height: 55px;
 	width: 100%;
 	position: absolute;
 	top: 0;
+	padding: 10px 0;
+	background-color: white;
 }
 
 #header-content .logo{
@@ -23,9 +25,11 @@ button{
 #header-content input{
 	width: 125px;
 	height: 35px;
+	border-top-left-radius: 4px;
+	border-bottom-left-radius: 4px;
 }
 
 #header-content .col{
 	display: inline-block;
-	
+
 }
