--- a/css/jonathan.css
+++ b/css/jonathan.css
@@ -1,3 +1,35 @@
-.logo{
-	width: 300px;
+#header-content{
+	height: 55px;
+	width: 100%;
+	position: absolute;
+	top: 0;
+	padding: 10px 0;
+	background-color: white;
+}
+
+#header-content .logo{
+	width: 100px;
+}
+
+button{
+	width: 75px;
+	height: 35px;
+	background-color: green;
+	color: white;
+	font-size: 1.2em;
+	border: none;
+	border-top-right-radius: 4px;
+	border-bottom-right-radius: 4px;
+}			
+
+#header-content input{
+	width: 125px;
+	height: 35px;
+	border-top-left-radius: 4px;
+	border-bottom-left-radius: 4px;
+}
+
+#header-content .col{
+	display: inline-block;
+
 }
