--- a/css/styles_kevin.css
+++ b/css/styles_kevin.css
@@ -7,7 +7,7 @@
 
 body{
 	font-family:'Open Sans';
-
+	
 }
 /* Page navigation */
 nav.navbar{
@@ -113,6 +113,7 @@ nav.navbar a{
 }
 
 
-.changeColor {
-   background: white;
+nav {
+
+  transition: background-color 0.4s ease-out;
 }
