--- a/css/jonathan.css
+++ b/css/jonathan.css
@@ -1,4 +1,4 @@
-#header-content{
+/*#header-content{
 	height: 55px;
 	width: 100%;
 	position: absolute;
@@ -32,4 +32,4 @@ button{
 #header-content .col{
 	display: inline-block;
 
-}
+}*/
