--- a/css/jonathan.css
+++ b/css/jonathan.css
@@ -33,3 +33,48 @@ button{
 	display: inline-block;
 
 }*/
+
+#login-registration .row{
+	width: 50%;
+}
+
+#login-registration .row-left{
+	float: left;
+}
+
+#login-registration .row-right{
+	float: left;
+}
+
+footer{
+	position: absolute;
+	bottom: 0;
+	left: 0;		
+	width: 100%;
+}
+
+#login-registration7 main{
+		margin-top: 100px;
+}
+
+.cta-orange{
+	padding: 15px 60px;
+	background-color: #F2552C;
+	color: white;
+	font-weight: 600;
+}
+
+a.cta-orange:hover{
+	color: darken(10, white);
+}
+
+.cta-white{
+	padding: 13px 58px;
+	border: 2px solid #F2552C;
+	color: #F2552C;
+	font-weight: 600;
+}
+
+main{
+	margin-top: 100px;
+}
