--- a/css/styles_kevin.css
+++ b/css/styles_kevin.css
@@ -5,10 +5,14 @@
 /* fonts */
 @import url('https://fonts.googleapis.com/css?family=Open+Sans:300,400|Ubuntu');
 
+/*page properties */
+
 body{
 	font-family:'Open Sans';
+	font-size:16px;
 	
 }
+
 /* Page navigation */
 nav.navbar{
 	background-color:transparent;
@@ -19,46 +23,17 @@ nav.navbar a{
 	color:white;
 }
 
-.no_hover{  display: table-cell;
-   text-align: center;
-   vertical-align: middle;}
-/* Header */
-
-.promo-header {
-	height: 500px;
-	min-height: 300px;
-	background: linear-gradient( rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4) ),url('../img/header/mobile_header.jpg') center center no-repeat scroll;
-	-webkit-background-size: cover;
-	-moz-background-size: cover;
-	background-size: cover;
-	-o-background-size: cover;
+nav.navbar li{
+	line-height:16px;
 }
 
-.promo-header h1 b,.promo-header h1 strong{
-	font-weight:bold;
-}
-
-.promo-header .logo{
-	width:150px;
-}
-
-.promo-header h1{
-	margin-top:20px;
-	font-size:26px;
-	font-weight:100;
-}
-
-.promo-header .container{
-	position:relative;
-	top:25%;	
+nav {
+  transition: background-color 0.4s ease-out;
 }
 
 .navbar-dark .navbar-toggler{
 	color: white !important;
 	border-color: white;
-}
-.card {
-	height: 100%;
 }
 
 .navbar-dark .navbar-toggler-icon { 
@@ -90,10 +65,41 @@ nav.navbar a{
 	background: #548235;
 	color: white;
 	border-radius: 0px 5px 5px 0px;
-
 }
 
-.navbar input[type="search"],.navbar input[type="submit"]{font-size:12px;}
+.navbar input[type="search"],.navbar input[type="submit"]{
+	font-size:12px;
+}
+
+ /* Header */
+.promo-header {
+	height: 500px;
+	min-height: 300px;
+	background: linear-gradient( rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4) ),url('../img/header/mobile_header.jpg') center center no-repeat scroll;
+	-webkit-background-size: cover;
+	-moz-background-size: cover;
+	background-size: cover;
+	-o-background-size: cover;
+}
+
+.promo-header h1 b,.promo-header h1 strong{
+	font-weight:bold;
+}
+
+.promo-header .logo{
+	width:150px;
+}
+
+.promo-header h1{
+	margin-top:20px;
+	font-size:26px;
+	font-weight:100;
+}
+
+.promo-header .container{
+	position:relative;
+	top:25%;	
+}
 
 /* Search bar header*/
 .promo-header input[type="search"]{
@@ -102,6 +108,7 @@ nav.navbar a{
     padding: 10px;
 	border: none;
 }
+
 .promo-header input[type="submit"]{
 	margin-top:20px;
 	padding: 10px;
@@ -112,8 +119,108 @@ nav.navbar a{
 	color: white;
 }
 
-
-nav {
-
-  transition: background-color 0.4s ease-out;
+.card {
+	height: 100%;
 }
+
+section.homepage{
+	background-color:white;
+}
+
+/* color: rgb(59,56,56);	*/
+
+.product div.card-body h5{
+color: rgb(128,128,128);
+text-align:center;	
+}
+
+.product div.card-body h5 .price{
+font-weight:bold;
+}
+
+.product div.card-body h5 .time{
+
+}
+
+.product div.card-title h4{
+color: rgb(128,128,128);
+text-align:center;	
+}
+
+/* slider */
+@media (min-width: 768px) {
+  /* show 3 items */
+  .carousel-inner .active,
+  .carousel-inner .active + .carousel-item,
+  .carousel-inner .active + .carousel-item + .carousel-item {
+    display: block;
+  }
+
+  .carousel-inner
+    .carousel-item.active:not(.carousel-item-right):not(.carousel-item-left),
+  .carousel-inner
+    .carousel-item.active:not(.carousel-item-right):not(.carousel-item-left)
+    + .carousel-item,
+  .carousel-inner
+    .carousel-item.active:not(.carousel-item-right):not(.carousel-item-left)
+    + .carousel-item
+    + .carousel-item {
+    transition: none;
+  }
+
+  .carousel-inner .carousel-item-next,
+  .carousel-inner .carousel-item-prev {
+    position: relative;
+    transform: translate3d(0, 0, 0);
+  }
+
+  .carousel-inner
+    .active.carousel-item
+    + .carousel-item
+    + .carousel-item
+    + .carousel-item {
+    position: absolute;
+    top: 0;
+    right: -33.3333%;
+    z-index: -1;
+    display: block;
+    visibility: visible;
+  }
+
+  /* left or forward direction */
+  .active.carousel-item-left + .carousel-item-next.carousel-item-left,
+  .carousel-item-next.carousel-item-left + .carousel-item,
+  .carousel-item-next.carousel-item-left + .carousel-item + .carousel-item,
+  .carousel-item-next.carousel-item-left
+    + .carousel-item
+    + .carousel-item
+    + .carousel-item {
+    position: relative;
+    transform: translate3d(-100%, 0, 0);
+    visibility: visible;
+  }
+
+  /* farthest right hidden item must be abso position for animations */
+  .carousel-inner .carousel-item-prev.carousel-item-right {
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: -1;
+    display: block;
+    visibility: visible;
+  }
+
+  /* right or prev direction */
+  .active.carousel-item-right + .carousel-item-prev.carousel-item-right,
+  .carousel-item-prev.carousel-item-right + .carousel-item,
+  .carousel-item-prev.carousel-item-right + .carousel-item + .carousel-item,
+  .carousel-item-prev.carousel-item-right
+    + .carousel-item
+    + .carousel-item
+    + .carousel-item {
+    position: relative;
+    transform: translate3d(100%, 0, 0);
+    visibility: visible;
+    display: block;
+    visibility: visible;
+  }
