--- a/css/jonathan.css
+++ b/css/jonathan.css
@@ -47,10 +47,10 @@ button{
 }
 
 footer{
-	position: absolute;
+/* 	position: absolute;
 	bottom: 0;
 	left: 0;		
-	width: 100%;
+	width: 100%; */
 }
 
 #login-registration7 main{
