--- a/css/styles_kevin.css
+++ b/css/styles_kevin.css
@@ -126,8 +126,30 @@ nav {
 	height: 100%;
 }
 
-section.homepage{
+section.products{
 	background-color:white;
+}
+
+section.userExperience{
+	background:#D9D9D9;
+	
+
+}
+
+
+/* Section UserExperience */
+.userExperience img{
+  width:10vw;
+  height: 10vw;
+	
+}
+
+.userExperience h2{
+	color:white;
+	text-shadow: 2px 2px 2px #262626;
+
+	position: relative;
+	top: 25%;
 }
 
 /* color: rgb(59,56,56);	*/
@@ -149,15 +171,41 @@ font-weight:bold;
 }
 
 .product.card .card-body .btn .cta-white{
+
+}
+.product.card div.card-body{
+	text-align:center;
+}
+
+.product.card div.card-body a.btn.cta-white{
 	width:50%;
-	margin:0 auto;
 	text-align:center;
 	padding:15px;
 }
 
 .product div.card-title h4{
-color: rgb(128,128,128);
-text-align:center;	
+	color: rgb(128,128,128);
+	text-align:center;	
+}
+
+
+.products .carousel-control-prev,.products .carousel-control-next{
+background:rgb(102, 102, 102);
+position:static;
+width: 50%;
+float:left;
+padding:20px;
+
+}
+
+.carousel .clearfix{text-align:center;}
+
+.sliderbuttons{
+margin:0 auto;
+overflow:auto;
+display:inline-block;
+margin-top:20px;
+
 }
 
 /* slider */
