--- a/css/styles_kevin.css
+++ b/css/styles_kevin.css
@@ -26,6 +26,10 @@ nav.navbar a{
 	color:white;
 }
 
+nav.navbar .dropdown a{
+	color:black;
+}
+
 nav.navbar li{
 	line-height:16px;
 }
@@ -75,44 +79,77 @@ nav {
 }
 
  /* Header */
-.promo-header {
-	height: 500px;
-	min-height: 300px;
-	background: linear-gradient( rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4) ),url('../img/header/mobile_header.jpg') center center no-repeat scroll;
-	-webkit-background-size: cover;
-	-moz-background-size: cover;
-	background-size: cover;
-	-o-background-size: cover;
+ 
+
+.header {
+	-webkit-background-size: cover !important;
+	-moz-background-size: cover !important;
+	background-size: cover !important;
+	-o-background-size: cover !important;
 }
 
-.promo-header h1 b,.promo-header h1 strong{
+.header p {
+	color:white;
+}
+
+.promo-header{
+	background: linear-gradient( rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4) ),url('../img/header/mobile_header.jpg') center center no-repeat scroll;	
+	height: 500px;
+	min-height: 300px;
+}
+.content-header{
+	background:black;
+	height: 300px;
+	min-height: 300px;
+}
+
+.header h1 b,.header h1 strong{
 	font-weight:bold;
 }
 
-.promo-header .logo{
+.header .logo{
 	width:150px;
 }
 
-.promo-header h1{
-	margin-top:20px;
+.header h1{
+
 	font-size:26px;
 	font-weight:100;
 }
 
+.content-header h1{
+
+	font-size:35px;
+	font-weight:bold;
+}
+
+.promo-header h1{
+	margin-top:20px;	
+}
+
+.header .container{
+	position:relative;	
+}
 .promo-header .container{
-	position:relative;
-	top:25%;	
+	top:25%;
+	
+}
+
+.content-header .container{
+	top:50%;
+	
 }
 
 /* Search bar header*/
-.promo-header input[type="search"]{
+.header input[type="search"]{
 	margin-top:20px;
 	min-width: 220px;
     padding: 10px;
 	border: none;
+	height: 35px;
 }
 
-.promo-header input[type="submit"]{
+.header input[type="submit"]{
 	margin-top:20px;
 	padding: 10px;
 	position: relative;
@@ -126,14 +163,10 @@ nav {
 	height: 100%;
 }
 
-section.products{
-	background-color:white;
-}
+
 
 section.userExperience{
 	background:#D9D9D9;
-	
-
 }
 
 
@@ -146,13 +179,34 @@ section.userExperience{
 
 .userExperience h2{
 	color:white;
-	text-shadow: 2px 2px 2px #262626;
+	text-shadow: 1px 1px 1px #262626;
 
 	position: relative;
 	top: 25%;
 }
 
-/* color: rgb(59,56,56);	*/
+/* Section products */
+section.products{
+	background-color:white;
+}
+
+/* product thumpnails*/
+.products .col-1, .col-2, .col-3, .col-4, .col-5, .col-6, .col-7,
+ .col-8, .col-9, .col-10, .col-11, .col-12, .col, .col-auto,
+ .col-sm-1, .col-sm-2, .col-sm-3, .col-sm-4, .col-sm-5,
+ .col-sm-6, .col-sm-7, .col-sm-8, .col-sm-9, .col-sm-10,
+ .col-sm-11, .col-sm-12, .col-sm, .col-sm-auto, .col-md-1,
+ .col-md-2, .col-md-3, .col-md-4, .col-md-5, .col-md-6,
+ .col-md-7, .col-md-8, .col-md-9, .col-md-10, .col-md-11,
+ .col-md-12, .col-md, .col-md-auto, .col-lg-1, .col-lg-2,
+ .col-lg-3, .col-lg-4, .col-lg-5, .col-lg-6, .col-lg-7,
+ .col-lg-8, .col-lg-9, .col-lg-10, .col-lg-11, .col-lg-12,
+ .col-lg, .col-lg-auto, .col-xl-1, .col-xl-2, .col-xl-3, .col-xl-4,
+ .col-xl-5, .col-xl-6, .col-xl-7, .col-xl-8, .col-xl-9, .col-xl-10,
+ .col-xl-11, .col-xl-12, .col-xl, .col-xl-auto {
+	
+	margin-bottom:20px;
+}
 
 .product div.card-body h5{
 color: rgb(128,128,128);
@@ -178,7 +232,7 @@ font-weight:bold;
 }
 
 .product.card div.card-body a.btn.cta-white{
-	width:50%;
+	width:80%;
 	text-align:center;
 	padding:15px;
 }
@@ -188,6 +242,11 @@ font-weight:bold;
 	text-align:center;	
 }
 
+.product .card-img-top{
+max-height: 200px;
+min-height: 200px;
+	
+}
 
 .products .carousel-control-prev,.products .carousel-control-next{
 background:rgb(102, 102, 102);
@@ -195,19 +254,16 @@ position:static;
 width: 50%;
 float:left;
 padding:20px;
-
 }
 
-.carousel .clearfix{text-align:center;}
-
-.sliderbuttons{
-margin:0 auto;
-overflow:auto;
-display:inline-block;
-margin-top:20px;
-
-}
-
+.sidebar{
+	
+	padding:20px; 
+	border: 1px solid lightgray;
+	border-top-left-radius: calc(0.25rem - 1px);
+	border-top-right-radius: calc(0.25rem - 1px);
+	
+	}
 /* slider */
 @media (min-width: 768px) {
   /* show 3 items */
@@ -286,4 +342,15 @@ margin-top:20px;
     visibility: visible;
   }
   
-  
+  /*  Sliderbuttons */
+	.sliderbuttons{
+	margin:0 auto;
+	overflow:auto;
+	display:inline-block;
+	margin-top:20px;
+
+	}
+	
+ /*Slider clearfix*/
+ .carousel .clearfix{text-align:center;}
+ 
