--- a/css/jonathan.css
+++ b/css/jonathan.css
@@ -91,4 +91,14 @@ a.cta-orange:hover{
 }
 main{
 	margin-top: 100px;
+	min-height: 35vh;
+}
+
+header, main, footer{
+	float: left;
+	width: 100%;
+}
+
+pre{
+	float: left;
 }
