--- a/css/jonathan.css
+++ b/css/jonathan.css
@@ -38,11 +38,7 @@ button{
 	width: 50%;
 }
 
-#login-registration .row-left{
-	float: left;
-}
-
-#login-registration .row-right{
+#login-registration .row-left, #login-registration .row-right{
 	float: left;
 }
 
@@ -53,8 +49,8 @@ footer{
 	width: 100%; */
 }
 
-#login-registration7 main{
-		margin-top: 100px;
+#login-registration main{
+	margin-top: 100px;
 }
 
 .cta-orange{
@@ -101,4 +97,27 @@ header, main, footer{
 
 pre{
 	float: left;
+}
+
+#login-form{
+	width: 100%;
+}
+
+.form-steps > *, #login-form > *{
+	float: left;
+	width: 90%;
+}
+
+.form-steps{
+	width: 100%;
+	float: left;
+}
+
+.product.card:hover{
+	box-shadow: 0px 0px 20px 1px rgba(0,0,0,0.10);
+}
+
+.error-warning{
+	display: inline-block;
+	color: red;
 }
