--- a/css/stylesheet_Edje.css
+++ b/css/stylesheet_Edje.css
@@ -2,15 +2,14 @@ body {
     background-color: #D9D9D9;
 }
 
-.plaatje{
-margin-right: 3eM;
-margin-bottom: 2eM;
-
-}
 
 section.userDetail .cta-orange.btn{
 padding: 8px;
 
+}
+
+img{
+	display: block;
 }
 
 .inputMailadres{
