css en user details pagina

--- a/css/stylesheet_Edje.css
+++ b/css/stylesheet_Edje.css
@@ -33,3 +33,17 @@ img{
 .formWachtwoordHuidig {
 	flex-direction: column;
 }
+
+#profile-picture{
+	max-width: 400px;
+	max-height: 200px;	
+	height: 100%;
+	width: 100%;
+	
+}
+
+#editUserInfo{
+text-align: right;
+
+
+}
