--- a/css/stylesheet_Edje.css
+++ b/css/stylesheet_Edje.css
@@ -32,15 +32,8 @@ padding: 10px;
 
 }
 
-.formWachtwoordHuidig {
-	flex-direction: column;
-}
-
-#profile-picture{
-	max-width: 400px;
-	max-height: 200px;
-	height: 100%;
-	width: 100%;
+div#detailsTabel.row.row-right{
+	
 
 }
 
@@ -48,4 +41,10 @@ padding: 10px;
 	float: left;
 	width: 100%;
 }
+
+
+.table-user-details{
+	width: 75%;
+}
+
 
