--- a/css/jonathan.css
+++ b/css/jonathan.css
@@ -99,16 +99,34 @@ section.register{
 body{
 	min-height: 100vh;
 }
-/*
-header, main, footer{
-	
-	width: 100%;
+
+main{
+	min-height: 78vh;
 }
-/*
-pre{
+header{
+	min-height: 6vh;
+}
+
+.change-form{
 	float: left;
+	widows: 100%;
 }
-*/
+
+.change-form-group > *{
+	float: left;
+	width: 49%;
+} 
+
+.change-form button{
+	margin-top: 10px;
+}
+
+.change-form-group{
+	margin-bottom: 20px;
+}
+.change-form button:first-of-type, .change-form label{
+	margin-right: 6px;
+}
 
 #login-form{
 	width: 100%;
