--- a/css/jonathan.css
+++ b/css/jonathan.css
@@ -34,8 +34,16 @@ button{
 
 }*/
 
+.progress{
+	margin-top: 100px;
+}
+
 #login-form{
 	margin-bottom: 10px;
+}
+
+#login .error-warning{
+	flex-basis: 100%;
 }
 
 .cta-orange{
@@ -82,7 +90,7 @@ body{
 }
 
 main{
-	margin-top:min-height: 6vh;
+	margin-top: 6vh;
 	min-height: 78vh;
 }
 
@@ -113,7 +121,6 @@ main{
 }
 
 .form-steps > *, #login-form > *{
-	float: left;
 	width: 100%;
 }
 
