--- a/css/jonathan.css
+++ b/css/jonathan.css
@@ -1,39 +1,19 @@
-	/*#header-content{
-	height: 55px;
-	width: 100%;
-	position: absolute;
-	top: 0;
-	padding: 10px 0;
-	background-color: white;
+.upload-file{
+	margin-top: 10px;
 }
 
-#header-content .logo{
-	width: 100px;
+.dl-horizontal{
+	margin-top: 10px;
 }
 
-button{
-	width: 75px;
-	height: 35px;
-	background-color: green;
-	color: white;
-	font-size: 1.2em;
-	border: none;
-	border-top-right-radius: 4px;
-	border-bottom-right-radius: 4px;
-}			
-
-#header-content input{
-	width: 125px;
-	height: 35px;
-	border-top-left-radius: 4px;
-	border-bottom-left-radius: 4px;
+.profile-picture img{
+	width: 70px;
+	height: 70px;
 }
 
-#header-content .col{
-	display: inline-block;
-
-}*/
-
+.custom-file-label::after{
+	content: 'Zoek';
+}
 .progress{
 	margin-top: 100px;
 }
