--- a/css/mobile.css
+++ b/css/mobile.css
@@ -23,6 +23,8 @@
 	footer .separationline {
     border-right: 0px !important;
 	}
+	
+	
 }
 
 @media screen and (min-width: 300px) and (max-width: 576px) {
@@ -82,7 +84,7 @@
 		border-top: 0px !important;
 		padding:0px !important;
 	 }
-
+	
 }
 
 
@@ -123,6 +125,7 @@
 		border-top: 2px solid white;
 		padding:10px;
 	 }
+	 section.user-details .sidebar{float:none !important;}
 }
 
 
