--- a/css/styles_kevin.css
+++ b/css/styles_kevin.css
@@ -14,9 +14,38 @@ body{
 	width:100%;
 }
 
+p{
+	text-transform:capitalize;
+}
+section{
+	padding:50px;
+}
 
-section{padding:50px;}
+form label:first-letter{
+	text-transform:capitalize;
+}
 
+table th:first-letter{
+	text-transform:capitalize;
+}
+
+h1,h2,h3,h4,h5,h6{
+  overflow-wrap: break-word;
+  word-wrap: break-word;
+  -webkit-hyphens: auto;
+  -ms-hyphens: auto;
+  -moz-hyphens: auto;
+  hyphens: auto;
+}
+
+h1:first-letter,
+h2:first-letter,
+h3:first-letter,
+h4:first-letter,
+h5:first-letter,
+h6:first-letter{
+	text-transform:capitalize;
+}
 
 /* Page navigation */
 nav.navbar{
@@ -520,6 +549,9 @@ section.user-details{
 .no-margin{
 	margin:0;
 }
+
+
+
 .wrapper{
 	margin-left:-15px; 
 	margin-right:-15px;
