--- a/admin/css/jonathan.css
+++ b/admin/css/jonathan.css
@@ -43,7 +43,9 @@ main{
 header{
 	min-height: 6vh;
 }
-
+.btn-delete-product{
+	margin-top: 10px;
+}
 .beheerdersomgeving .form-group{
 	display: flex;
 	flex-direction: column;
