--- a/admin/css/jonathan.css
+++ b/admin/css/jonathan.css
@@ -31,6 +31,13 @@ a.cta-orange:hover{
 	box-shadow: 0px 0px 30px 1px rgba(0,0,0,0.25);
 }
 
+.preview-img {
+	margin-top: 10px;
+}
+
+.preview-img img{
+	width: 100%;
+}
 .error-warning{
 	margin-top: 10px;
 	display: inline-block;
@@ -52,13 +59,19 @@ header{
 	justify-content: space-between;
 	margin-bottom: 0.2rem;
 }
+.search-results .preview-article{
+	width: 100px;
+}
 
+.search-results td{
+	vertical-align: middle;
+}
 
 .beheerdersomgeving button{
 	margin-bottom: 0.2rem;
 }
 
-.beheerdersomgeving .table.striped{
+.beheerdersomgeving .table.striped, .search-results{
 	height: 440px;
 	overflow-y: scroll;
 	display: block;
