--- a/css/styles_kevin.css
+++ b/css/styles_kevin.css
@@ -140,6 +140,30 @@ nav {
 	height: 500px;
 	min-height: 300px;
 }
+
+#errorpage{
+	background: linear-gradient( rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4) ), url('../img/header/404.jpg') center center no-repeat scroll;
+    position:fixed;
+    width:100%;
+    height:100%;
+    top:0px;
+    left:0px;
+    z-index:1000;
+	
+}
+
+#errorpage .container{
+	top:50%;	
+}
+
+#errorpage .container h1{
+	font-size:35px
+}
+#errorpage .container p{
+	margin:20px;
+}
+
+
 .content-header{
 	background:black;
 	height: 300px;
@@ -565,6 +589,11 @@ section.user-details{
 color: #fff;
 background-color: #F2552C;
 border-color: #F2552C;
+}
+.btn-orange:hover{
+color: #fff;
+background-color:#d8360e;
+border-color:#d8360e;
 }
 .btn-orange:focus, .btn-orange.focus {
     box-shadow: 0 0 0 0.2rem rgba(242, 85, 44,0.5)
