--- a/css/styles_kevin.css
+++ b/css/styles_kevin.css
@@ -153,7 +153,7 @@ nav {
 }
 
 #errorpage .container{
-	top:50%;	
+	top:40%;	
 }
 
 #errorpage .container h1{
@@ -161,6 +161,7 @@ nav {
 }
 #errorpage .container p{
 	margin:20px;
+	line-height: 20px;
 }
 
 
