--- a/css/styles_kevin.css
+++ b/css/styles_kevin.css
@@ -261,7 +261,7 @@ html body section.user-details div.container div#nav-tabContent.tab-content {
 }
 
 section.userExperience{
-	background:#D9D9D9;
+	background:#bfbfbf;
 }
 
 section.attention{
