--- a/layout/mail/mail eenmaal andermaal.html
+++ b/layout/mail/mail eenmaal andermaal.html
@@ -14,7 +14,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>*|MC:SUBJECT|*</title>
-        
+
     <style type="text/css">
 		p{
 			margin:10px 0;
@@ -612,16 +612,16 @@
 				<table align="left" border="0" cellspacing="0" cellpadding="0" width="100%" style="width:100%;">
 				<tr>
 				<![endif]-->
-			    
+
 				<!--[if mso]>
 				<td valign="top" width="600" style="width:600px;">
 				<![endif]-->
                 <table style="max-width:100%; min-width:100%;" class="mcnTextContentContainer" width="100%" cellspacing="0" cellpadding="0" border="0" align="left">
                     <tbody><tr>
-                        
+
                         <td class="mcnTextContent" style="padding: 0px 18px 9px; text-align: center;" valign="top">
-                        
-                            <div style="text-align: center;"><a href="http://iproject34.icasites.nl/index.php" target="_blank">Naar Eenmaal andermaal</a></div>
+
+                            <div style="text-align: center;"><a href="http://iproject34.icasites.nl/index.php" target="_blank">Naar Eenmaal Andermaal</a></div>
 
                         </td>
                     </tr>
@@ -629,7 +629,7 @@
 				<!--[if mso]>
 				</td>
 				<![endif]-->
-                
+
 				<!--[if mso]>
 				</tr>
 				</table>
@@ -664,16 +664,16 @@
 				<table align="left" border="0" cellspacing="0" cellpadding="0" width="100%" style="width:100%;">
 				<tr>
 				<![endif]-->
-			    
+
 				<!--[if mso]>
 				<td valign="top" width="600" style="width:600px;">
 				<![endif]-->
                 <table style="max-width:100%; min-width:100%;" class="mcnTextContentContainer" width="100%" cellspacing="0" cellpadding="0" border="0" align="left">
                     <tbody><tr>
-                        
+
                         <td class="mcnTextContent" style="padding-top:0; padding-right:18px; padding-bottom:9px; padding-left:18px;" valign="top">
-                        
-                            <h1 style="text-align: center;"><span style="font-family:open sans,helvetica neue,helvetica,arial,sans-serif"><span style="color:#FFF0F5"><strong>Eenmaal</strong> andermaal</span></span></h1>
+
+                            <h1 style="text-align: center;"><span style="font-family:open sans,helvetica neue,helvetica,arial,sans-serif"><span style="color:#FFF0F5"><strong>Eenmaal</strong> Andermaal</span></span></h1>
 
                         </td>
                     </tr>
@@ -681,7 +681,7 @@
 				<!--[if mso]>
 				</td>
 				<![endif]-->
-                
+
 				<!--[if mso]>
 				</tr>
 				</table>
@@ -716,16 +716,16 @@
 				<table align="left" border="0" cellspacing="0" cellpadding="0" width="100%" style="width:100%;">
 				<tr>
 				<![endif]-->
-			    
+
 				<!--[if mso]>
 				<td valign="top" width="600" style="width:600px;">
 				<![endif]-->
                 <table style="max-width:100%; min-width:100%;" class="mcnTextContentContainer" width="100%" cellspacing="0" cellpadding="0" border="0" align="left">
                     <tbody><tr>
-                        
+
                         <td class="mcnTextContent" style="padding-top:0; padding-right:18px; padding-bottom:9px; padding-left:18px;" valign="top">
-                        
-                            <h2 class="mc-toc-title"><span style="font-family:open sans,helvetica neue,helvetica,arial,sans-serif"><strong><span style="color:#808080">Welkom bij eenmaal andermaal</span></strong></span></h2>
+
+                            <h2 class="mc-toc-title"><span style="font-family:open sans,helvetica neue,helvetica,arial,sans-serif"><strong><span style="color:#808080">Welkom bij Eenmaal Andermaal</span></strong></span></h2>
 <span style="font-family:open sans,helvetica neue,helvetica,arial,sans-serif">Hier is de code waarmee u zich kunt registeren</span>
                         </td>
                     </tr>
@@ -733,7 +733,7 @@
 				<!--[if mso]>
 				</td>
 				<![endif]-->
-                
+
 				<!--[if mso]>
 				</tr>
 				</table>
@@ -811,16 +811,16 @@
 				<table align="left" border="0" cellspacing="0" cellpadding="0" width="100%" style="width:100%;">
 				<tr>
 				<![endif]-->
-			    
+
 				<!--[if mso]>
 				<td valign="top" width="600" style="width:600px;">
 				<![endif]-->
                 <table style="max-width:100%; min-width:100%;" class="mcnTextContentContainer" width="100%" cellspacing="0" cellpadding="0" border="0" align="left">
                     <tbody><tr>
-                        
+
                         <td class="mcnTextContent" style="padding-top:0; padding-right:18px; padding-bottom:9px; padding-left:18px;" valign="top">
-                        
-                            <h1 class="null" style="text-align: center;"><span style="font-family:open sans,helvetica neue,helvetica,arial,sans-serif"><strong><span style="color:#FFF0F5">Eenmaal</span>&nbsp;</strong> <a href="http://iproject34.icasites.nl/index.php"><img data-file-id="2582081" src="https://gallery.mailchimp.com/e0f09bf4242e741d5c39d977b/images/3378aed6-adf0-489c-a717-804959b98057.png" style="border: 0px  ; width: 73px; height: 94px; margin: 0px;" width="73" height="94"></a>&nbsp; <span style="color:#FFF0F5">andermaal</span></span></h1>
+
+                            <h1 class="null" style="text-align: center;"><span style="font-family:open sans,helvetica neue,helvetica,arial,sans-serif"><strong><span style="color:#FFF0F5">Eenmaal</span>&nbsp;</strong> <a href="http://iproject34.icasites.nl/index.php"><img data-file-id="2582081" src="https://gallery.mailchimp.com/e0f09bf4242e741d5c39d977b/images/3378aed6-adf0-489c-a717-804959b98057.png" style="border: 0px  ; width: 73px; height: 94px; margin: 0px;" width="73" height="94"></a>&nbsp; <span style="color:#FFF0F5">Andermaal</span></span></h1>
 
                         </td>
                     </tr>
@@ -828,7 +828,7 @@
 				<!--[if mso]>
 				</td>
 				<![endif]-->
-                
+
 				<!--[if mso]>
 				</tr>
 				</table>
