--- a/css/mobile.css
+++ b/css/mobile.css
@@ -86,8 +86,14 @@
 		border-top: 0px !important;
 		padding:0px !important;
 	 }
-	
+	 
+	 .ghostbtn{   
+	 padding: 10px 15px;
+    font-size: 18px;
+	}
 }
+	
+
 
 
 /* Large devices (desktops, 992px and up) */
