--- a/css/styles_kevin.css
+++ b/css/styles_kevin.css
@@ -618,16 +618,19 @@ border-color:#d8360e;
 }
 
 .ghostbtn{
-	margin-right: 50px;
-	padding:10px;
-   	color:rgb(102, 102, 102);
-    border: 2px solid white;
+   	color:white;
+	margin:10px 10px;
     font-size: 22px;
-	background-color:white;
+	background-color:#F2552C;
+	border: none;
+	border-radius: 300px;
+	padding: 15px 30px;
+
 }
 
-section.attention .ghostbtn:hover{
-	
-
+.ghostbtn:hover{
+	color:white;
 }
+
+.ghostbtn:focus{box-shadow: 0 0 0 0.2rem rgba(242, 85, 44,0.5)}
 
