--- a/css/Jeremy.css
+++ b/css/Jeremy.css
@@ -1,13 +1,14 @@
 section.register p{
      margin: 20px 0;
  }
+
 .error-warning {
     margin-top: 100px;
 }
 
 /* See here the legendary code of Jeremy the Godly */
-.navbar input[type="search"]::placeholder{color:white;}
+.navbar input[type="search":]:placeholder{color:white;}
 
 /* See here the legendary code of Jeremy nogwat */
 .navbar input[type="search"]::placeholder{color:white; opacity:1;}
->>>>>>> fc6c220066b98d314be2aca4ace67e05d3181ca5
+
