--- a/css/styles_kevin.css
+++ b/css/styles_kevin.css
@@ -616,21 +616,23 @@ border-color:#d8360e;
 .btn-orange:focus, .btn-orange.focus {
     box-shadow: 0 0 0 0.2rem rgba(242, 85, 44,0.5)
 }
-
+.cta-orange{margin:10px 10px;}
 .ghostbtn{
-   	color:white;
+   	color:rgb(102, 102, 102);
 	margin:10px 10px;
     font-size: 22px;
-	background-color:#F2552C;
+	background-color:white;
 	border: none;
 	border-radius: 300px;
 	padding: 15px 30px;
 
-}
+} 
 
 .ghostbtn:hover{
-	color:white;
+	color:rgb(102, 102, 102);
 }
+
+
 
 .ghostbtn:focus{box-shadow: 0 0 0 0.2rem rgba(242, 85, 44,0.5)}
 
