info passmodal en qachtwoord vergeten

--- a/css/jonathan.css
+++ b/css/jonathan.css
@@ -1,4 +1,4 @@
-#login {
+#wachtwoordVergeten, #login {
 	background: url(../img/bg-login.jpg) no-repeat;
 	background-size: cover;
 	background-position: center center;
